--- a/frontend/app/src/main/res/xml/network_security_config.xml
+++ b/frontend/app/src/main/res/xml/network_security_config.xml
@@ -4,5 +4,6 @@
         <domain includeSubdomains="true">107.98.86.149</domain>
         <domain includeSubdomains="true">107.98.86.154</domain>
         <domain includeSubdomains="true">192.168.1.173</domain>
+        <domain includeSubdomains="true">192.168.1.6</domain>
     </domain-config>
 </network-security-config>
